--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "venv/bin/python"
+    "python.pythonPath": "/home/angelfa/.pyenv/versions/miniconda3-4.7.12/envs/datascience/bin/python"
 }
